--- a/MemePicker/index.html
+++ b/MemePicker/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;800&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body ondblclick = "closeFromBackground()">
 	<header>
 		<div class="header-inner">
 			<img src="./images/pumpkin.png" class="pumpkin-img">
