--- a/Personal Dashboard Chrome Extension/index.html
+++ b/Personal Dashboard Chrome Extension/index.html
@@ -28,7 +28,7 @@
                 <h1 id="time"></h1>
                 <h2 id="showName">
                     <p>Hello, what is your name?</p>
-                    <input id="getShowName" class='showNameClass' type='textarea'>
+                    <input id="getShowName" type='textarea'>
                 </h2>
             </div>
             
