--- a/Personal Dashboard Chrome Extension/index.html
+++ b/Personal Dashboard Chrome Extension/index.html
@@ -2,7 +2,9 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="logo.png">
         <title>Dashboard</title>
+        <script defer src="index.js"></script>
     </head>
     <body>
         <main>    
@@ -34,6 +36,5 @@
             
             <p id="author"></p>
         </main>
-        <script src="index.js"></script>
     </body>
 </html>
